# planify

./: .gitignore  README.md  pyproject.toml
doc/: dev_enviroment.md  pipeline_review.md  tests.md
doc/guides/: design_document.md
docker/: docker-compose.override.yml.example  docker-compose.yml
docker/config/: env
docker/images/planify/: Dockerfile
docker/tests/: test-docker-compose.yml
docker/tests/config/: env
docker/tests/images/planify/: Dockerfile
src/: main.py
src/app/: __init__.py  run.py  tg_handler.py
src/app/entities/: __init__.py  appointment.py  slot.py
src/app/models/: __init__.py  appointment.py  base.py  client.py  role.py  slot.py  user.py
src/app/services/: __init__.py  adminservice.py  appointment.py  client.py  role.py  slot.py  slotservice.py  user.py
src/common/framework/alembic/: env.py
src/common/framework/alembic/versions/: 8e5820ff6e26_add_initial_tables.py
src/common/framework/schema/: schema.py
src/common/utils/: validators.py
src/infrastructure/: databaseengine.py
src/infrastructure/env/: envconfig.py
src/infrastructure/postgres/: databaseengine.py
src/infrastructure/telegrambot/: bot.py
src/infrastructure/telegrambot/handlers/admin/actions/: __init__.py  add_slot.py  base.py  delete_slot.py  edit_slot.py  view_slot.py
src/infrastructure/telegrambot/keyboards/: admin.py
tests/integration/: integration_test.py  slotservice_test.py  userservice_test.py
tests/integration/common/fixture/: __init__.py  cleandatabase.py
tests/unit/: example_test.py
(+11 files in other folders)
