[project]
name = "planify"
version = "0.1.0"
description = ""
authors = [
    {name = "Daniil Kolov",email = "koloff.daniil@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.poetry]
package-mode = false
packages = [
    { include = 'src'}
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
