[project]
name = "planify"
version = "0.1.0"
description = ""
authors = [
    {name = "Daniil Kolov",email = "koloff.daniil@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest==8.4.2",
    "sqlalchemy==2.0.44",
    "alembic==1.17.0",

]

[tool.poetry]
package-mode = false
packages = [
    { include = 'src'}
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
